# SphWaterfallStuPro17

./: .gitignore  README.txt  TestConfig.cfg
Planung/: BaseClasses.vsdx  Commands.md  Planung SPH.md  SPH Algorithmus Klassendiagramm.vsdx  Sph Team TODO.md  Workflow.md
Planung/Klassendiagramm/: SPH Algorithmus Klassendiagramm.vdx  vis_classes.vsdx
SphWaterfall/: Build.bat  CMakeLists.txt
SphWaterfall/SphWaterfall/: CMakeLists.txt
SphWaterfall/SphWaterfall/src/: CMakeLists.txt  SphWaterfall.cpp
SphWaterfall/SphWaterfall/src/cui/: AsyncCommand.cpp  AsyncCommand.h  CMakeLists.txt  CUI.cpp  CUI.h  CUICommand.cpp  CUICommand.h  CUICommandParameter.cpp  CUICommandParameter.h  CommandHandler.cpp  CommandHandler.h  CommandParameter.cpp  CommandParameter.h
SphWaterfall/SphWaterfall/src/data/: CMakeLists.txt  FluidParticle.cpp  FluidParticle.h  ISphParticle.h  NullableWrapper.cpp  NullableWrapper.h  ParticleIO.cpp  ParticleIO.h  SphParticle.cpp  SphParticle.h  StaticParticle.cpp  StaticParticle.h  Vector3.cpp  Vector3.h
SphWaterfall/SphWaterfall/src/export/: CMakeLists.txt  IExporter.h  VTKExporter.cpp  VTKExporter.h
SphWaterfall/SphWaterfall/src/geometry/: CMakeLists.txt  Face.cpp  Face.h  ITerrainParser.h  Terrain.cpp  Terrain.h  TerrainParser.cpp  TerrainParser.h
SphWaterfall/SphWaterfall/src/particleGen/: CMakeLists.txt  FluidParticleGenerator.cpp  FluidParticleGenerator.h  StaticParticleGenerator.cpp  StaticParticleGenerator.h
SphWaterfall/SphWaterfall/src/simulation/: CMakeLists.txt  DomainDecomposer.cpp  DomainDecomposer.h  DomainHash.cpp  DomainHash.h  Dummy.txt  ISphKernel.h  ISphNeighbourSearch.h  ParticleDomain.cpp  ParticleDomain.h  Poly6Kernel.cpp  Poly6Kernel.h  SimulationUtilities.cpp  SimulationUtilities.h  SphKernel.cpp  SphKernel.h  SphKernelFactory.cpp  SphKernelFactory.h  SphManager.cpp  SphManager.h  SphNeighbourSearch.cpp  SphNeighbourSearch.h  SphNeighbourSearchFactory.cpp  SphNeighbourSearchFactory.h  WendlandKernel.cpp  WendlandKernel.h
SphWaterfall/SphWaterfall/src/visualization/: CMakeLists.txt  Camera.cpp  Camera.h  DebugObject.cpp  DebugObject.h  Frame.cpp  Frame.h  FrameHandler.cpp  ParticleObject.cpp  ParticleObject.h  Pixel.cpp  Pixel.h  Ray.cpp  Ray.h  Shader.cpp  Shader.h  VideoWriter.cpp  VideoWriter.h  VisualizationManager.cpp  VisualizationManager.h  util.h
